# porpoise-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDENTIALS.local.yaml  LICENSE  README.md  README.zh.md  README_en.md  pyproject.toml
.github/workflows/: gitee-sync.yml  test.yml  validate.yml
.reasonix/readme-versions/: README-v20260618-0026.md
config/: agent.yaml  mcp_servers.yaml  models.yaml
data/knowledge_base/: graph_export.json  porpoise_knowledge_graph.py  porpoise_research_teams.md
docs/: ARCHITECTURE.md  EVALUATION.md  SKILLS.md  WORKFLOWS.md
examples/: acoustic_analysis.py  literature_review.py
scripts/: setup.sh  shared_types.py
src/: __init__.py  adapter.py  cli.py  rcca_core.py
src/agent/: __init__.py  loop.py  memory.py  orchestrator.py  tools.py
src/agents/: __init__.py  acoustic.py  acoustic_detector.py  base.py  conservation.py  critic.py  ecology.py  literature.py  orchestrator.py  topology.py
src/cognitive/: __init__.py  bdi.py  decomposer.py  react_loop.py  reflexion.py  search.py  stategraph.py
src/execution/: __init__.py  api.py  sandbox.py  tool_registry.py
src/integration/: __init__.py  cognitive_search_adapter.py  knowledge_graph.py  obsidian_adapter.py  zotero_adapter.py
src/interaction/: __init__.py  nlu.py  renderer.py  sse_emitter.py
src/mapping/: __init__.py  router.py  serializer.py  validator.py
src/memory/: __init__.py  long_term.py  manager.py  short_term.py
src/prompts/: system_prompts.py
src/skills/detect-clicks/: SKILL.md
src/skills/search-literature/: SKILL.md
src/utils/: config.py  logging.py  types.py
tests/: __init__.py  robustness_test.py  test_bdi.py  test_bdi_standalone.py  test_integration.py  test_memory.py  test_memory_standalone.py  test_search_standalone.py  test_serializer.py  workflow_test.py
