[project]
name = "porpoise-agent"
version = "0.1.0"
description = "江豚研究智能体 —— 适配豚类（江豚为主）研究的 AI Agent 框架，基于 Reasonix + DeepSeek"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "刘凯研究员课题组", email = "liukai@ffrc.cn"}
]
requires-python = ">=3.11"
dependencies = [
    "cognitive-search-engine",          # 本地路径: D:/Reasonix/cognitive-search-engine
    "reasonix>=0.30.0",
    "openai>=1.0.0",           # DeepSeek API 兼容
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "librosa>=0.10",
    "soundfile>=0.12",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "rich>=13.0",
    "httpx>=0.25",
    "pyarrow>=15.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "rasterio>=1.3",
    "obspy>=1.4",               # 地震/声学信号处理
    "pydub>=0.25",
    "pamguide",                 # PAM 工具
    "langchain>=0.3",
    "chromadb>=0.5",            # 向量存储
    "neo4j>=5.0",               # 知识图谱（可选）
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
gpu = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "tensorflow>=2.15",
]

[project.scripts]
porpoise = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: slow tests (deselect with '-m \"not slow\"')",
    "unit: unit tests",
    "integration: integration tests",
    "network: tests requiring network access",
]
strict = true
